[project]
name = "url-extractor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "instructor>=1.15.1",
    "langfuse>=4.7.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.48.0",
]
